# rust-canister-template

./: .gitignore  Cargo.toml  README.md  canbench.yml  canbench_results.yml  cuzz.json  dfx.json  package-lock.json  package.json
src/backend/: Cargo.toml  backend.did
src/backend/src/: dashboard.rs  lib.rs  lifecycle.rs  logs.rs  main.rs  metrics.rs  state.rs  storage.rs  types.rs
src/backend/src/http_types/: mod.rs  tests.rs
src/backend/src/state/: audit.rs
src/backend/templates/: dashboard.html
src/backend/tests/: integration_test.rs
src/berg_backend/: Cargo.toml
src/berg_frontend/: package.json
src/berg_frontend/src/lib/: canisters.js
src/frontend/: package.json
