[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.10"
ic-canister-log = "0.2.0"
ic-cdk = "0.16"
ic-cdk-timers = "0.10" # Feel free to remove this dependency if you don't need timers
ic-metrics-encoder = "1.1.1"
serde = "1.0.217"
serde_json = "1.0.134"
serde_bytes = "0.11.15"
askama = "0.12.1"
ic-stable-structures = "0.6.7"
candid_parser = "0.1.4"
canbench-rs = { version = "0.1.9", optional = true }

[dev-dependencies]
pocket-ic = "6.0.0" # needs to be a dev dependency, otherwise wasm build fails due to tokio peer dependency of pocket-ic
proptest = "1.6.0"
